# fastapi-static-files

./: README.md  pyproject.toml
src/fastapi_static_files/: dependencies.py  main.py
src/fastapi_static_files/routers/: items.py
